--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,3 +28,12 @@
 
     <button type="submit" class="blue">Login</button>
 </form>
+
+
+{% comment %} 
+login
+<form method="post" action="">
+    {% csrf_token %}
+    {{form}}
+    <button type="submit" class="blue">Login</button>
+</form> {% endcomment %}
