--- a/templates/letter/letter_inbox.html
+++ b/templates/letter/letter_inbox.html
@@ -6,15 +6,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-
-
 <hr>
 <hr>
 
   {% for a in letter %}
-    
     {% if a.target == user or user.is_superuser %}
-      
       <ul class="list-group list-group-horizontal">
         <li class="list-group-item"> موضوع : {{a.title}}</li>
         <li class="list-group-item"> فرستنده : {{a.author}}</li>
@@ -24,11 +20,11 @@
         <li class="list-group-item"><a href="{{a.file.url}}" download="{{a.file.url}}">Download</a> </li>
         <li class="list-group-item"><a href="{% url 'letter_detail' a.pk %}">Details</a></li>
         {% if user.is_level_2 or user.is_superuser %}
-          <li class="list-group-item"><a href="{% url 'letter_edit' a.pk %}">Edit</a></li>
+          <li class="list-group-item"><a href="{% url 'reject_letter' a.pk %}">Reject</a></li>
         {% endif %}
-        
       </ul>
     {% endif %}
-      
   {% endfor %}
+
+
 {% endblock content %}
